more notes from Feb

--- a/Stability/notes/todo.org
+++ b/Stability/notes/todo.org
@@ -5,22 +5,28 @@
 **** Use profiler?
 *** Do we want to make sure no standard functions get into the stats? Probably
 *** Probable bugs
-**** 0s in the current tables: constructors are not filtered early enough?
-**** Sometimes stable=NaN (division by zero) -- most likely, consequence of previous
-**** Pluto fails because of CSV can't install itself
+**** DONE 0s in the current tables: constructors are not filtered early enough?
+**** DONE Sometimes stable=NaN (division by zero) -- most likely, consequence of previous
+**** TODO Pluto fails because of CSV can't install itself
 (probably fixed by starting from scratch env?)
 *** Nice to have
 **** declared types of the methods
 **** how unstable is every call: ratio of unstable *slots*
 *** Data Analysis We May Be Interested In
-**** correlation b/w size and stability
+**** correlations b/w stability and:
+***** size of methods
+***** amount of control-flows (jumps)
+***** amount of `return`s
+***** stability of code near return site (probably hard to measure)
 ** Formal model
-*** How is "surface" language different from IR?
-**** One difference: "just calls" on surface become dispatches or direct-calls in IR?
-**** What else?
-*** Ben thinks that the key is translation between those two — why?
-*** Do we need two flavours of IR: strongly typed and gradually typed?
+*** Two IRs
+**** How is "surface" language different from IR?
+***** One difference: "just calls" on surface become dispatches or direct-calls in IR?
+***** What else?
+**** Ben thinks that the key is translation between those two — why?
+**** Do we need two flavours of IR: strongly typed and gradually typed?
 - So that we can state the "safe fragment" property.
+*** Single IR
 ** Misc
 - What does stability mean:
   + in docs
